Added DinoRun, fixed spelling mistake

--- a/index.html
+++ b/index.html
@@ -43,10 +43,15 @@
                 <a href="https://gitlab.com/harrypeach1999/ciph" title="View the public issue tracker" class="link-button"><i class="fab fa-gitlab">&nbsp;</i>Issue Tracker</a>
             </div>
             <div class="content">
-                <h3>bootscreenx</h3>
-                <p>A website to create boot images for the Nintendo Switch that resemble BIOS screens from early computers. Originally for the Nintendo 3DS but updated and maintained for the Switch by me.</p>
+                <h3>bootscreennx</h3>
+                <p>A website to create boot images for the Nintendo Switch that resemble BIOS screens from early computers. Rewritten and improved from a project that provided a similar service for the Nintendo 3DS.</p>
                 <a href="https://harrypeach.github.io/bootscreennx/" title="View the project itself" class="link-button"><i class="fas fa-share-square">&nbsp;</i>Website</a>
                 <a href="https://github.com/HarryPeach/bootscreennx" title="View the source code on GitHub" class="link-button"><i class="fab fa-github">&nbsp;</i>Source</a>
+            </div>
+            <div class="content">
+                <h3>DinoRunNX</h3>
+                <p>A port of the famous Chromium "Dino Game" to the Nintendo Switch. Written in Javascript, and some C code for launching the inbuilt browser on the device and making it load local files.</p>
+                <a href="https://github.com/HarryPeach/DinoRunNX" title="View the source code on GitHub" class="link-button"><i class="fab fa-github">&nbsp;</i>Source</a>
             </div>
             <div class="content">
                 <h3>Skye Assistant</h3>
