--- a/index.html
+++ b/index.html
@@ -35,19 +35,39 @@
     <hr>
     <main>
         <section>
-            <h2>Some of my projects</h2>
-            <div class="content">
-                <h3>Ciph</h3>
-                <p>Ciph is an android app to generate secure and memorable passwords. Based on a <a href="https://xkcd.com/936/">famous xkcd comic</a>, passwords are generated from a pool of random words making them easier to remember and providing higher entropy than a traditional password.</p>
-                <a href="https://play.google.com/store/apps/details?id=ga.cphn.ciph" title="Download the app from the Play Store" class="link-button"><i class="fab fa-google-play">&nbsp;</i>Play Store</a>
-                <a href="https://gitlab.com/harrypeach1999/ciph" title="View the public issue tracker" class="link-button"><i class="fab fa-gitlab">&nbsp;</i>Issue Tracker</a>
-            </div>
-            <div class="content">
-                <h3>bootscreennx</h3>
-                <p>A website to create boot images for the Nintendo Switch that resemble BIOS screens from early computers. Rewritten and improved from a project that provided a similar service for the Nintendo 3DS.</p>
-                <a href="https://harrypeach.github.io/bootscreennx/" title="View the project itself" class="link-button"><i class="fas fa-share-square">&nbsp;</i>Website</a>
-                <a href="https://github.com/HarryPeach/bootscreennx" title="View the source code on GitHub" class="link-button"><i class="fab fa-github">&nbsp;</i>Source</a>
-            </div>
+			<h2>Some of my projects</h2>
+			<div class="flip-card" style="--image: url(http://imgs.xkcd.com/comics/password_strength.png);">
+				<div class="flip-card-inner">
+					<div class="flip-card-front">
+						<div class="card-content">
+							<h1>Ciph</h1>
+							<span>Ciph is an android app to generate secure and memorable passwords. Based on a famous xkcd comic, passwords are generated from a pool of random words making them easier to remember and providing higher entropy than a traditional password.</span>
+						</div>
+					</div>
+					<div class="flip-card-back" style="background-color: rgb(237,69,240);">
+						<div class="card-content">
+							<a href="https://play.google.com/store/apps/details?id=ga.cphn.ciph"><i class="fab fa-google-play"></i></a>
+							<a href="https://gitlab.com/harrypeach1999/ciph"><i class="fab fa-gitlab"></i></a>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="flip-card" style="--image: url(https://user-images.githubusercontent.com/4750998/57393423-f59be080-71ba-11e9-8517-1cc6d41c3a1e.png);">
+				<div class="flip-card-inner">
+					<div class="flip-card-front">
+						<div class="card-content">
+							<h1>bootscreennx</h1>
+							<span>A website to create boot images for the Nintendo Switch that resemble BIOS screens from early computers. Rewritten and improved from a project that provided a similar service for the Nintendo 3DS.</span>
+						</div>
+					</div>
+					<div class="flip-card-back" style="background-color: rgb(182,73,240);">
+						<div class="card-content">
+							<a href="https://harrypeach.github.io/bootscreennx/"><i class="fab fa-google-play"></i></a>
+							<a href="https://github.com/HarryPeach/bootscreennx"><i class="fab fa-gitlab"></i></a>
+						</div>
+					</div>
+				</div>
+			</div>
             <div class="content">
                 <h3>DinoRunNX</h3>
                 <p>A port of the famous Chromium "Dino Game" to the Nintendo Switch. Written in Javascript, and some C code for launching the inbuilt browser on the device and making it load local files.</p>
