Replaced all projects with new image cards

--- a/index.html
+++ b/index.html
@@ -36,6 +36,21 @@
     <main>
         <section>
 			<h2>Some of my projects</h2>
+			<div class="flip-card" style="--image: url(https://user-images.githubusercontent.com/4750998/59889195-262e8700-93c3-11e9-9eb2-ea328b5f620d.png?s=200);">
+				<div class="flip-card-inner">
+					<div class="flip-card-front">
+						<div class="card-content">
+							<h1>emojimage</h1>
+							<span>A python package that generates collages of emojis based on an image input.</span>
+						</div>
+					</div>
+					<div class="flip-card-back" style="background-color: rgb(237,69,240);">
+						<div class="card-content">
+							<a href="https://github.com/HarryPeach/emojimage"><i class="fab fa-github"></i></a>
+						</div>
+					</div>
+				</div>
+			</div>
 			<div class="flip-card" style="--image: url(http://imgs.xkcd.com/comics/password_strength.png);">
 				<div class="flip-card-inner">
 					<div class="flip-card-front">
@@ -44,7 +59,7 @@
 							<span>Ciph is an android app to generate secure and memorable passwords. Based on a famous xkcd comic, passwords are generated from a pool of random words making them easier to remember and providing higher entropy than a traditional password.</span>
 						</div>
 					</div>
-					<div class="flip-card-back" style="background-color: rgb(237,69,240);">
+					<div class="flip-card-back" style="background-color: rgb(182,73,240);">
 						<div class="card-content">
 							<a href="https://play.google.com/store/apps/details?id=ga.cphn.ciph"><i class="fab fa-google-play"></i></a>
 							<a href="https://gitlab.com/harrypeach1999/ciph"><i class="fab fa-gitlab"></i></a>
@@ -60,24 +75,29 @@
 							<span>A website to create boot images for the Nintendo Switch that resemble BIOS screens from early computers. Rewritten and improved from a project that provided a similar service for the Nintendo 3DS.</span>
 						</div>
 					</div>
-					<div class="flip-card-back" style="background-color: rgb(182,73,240);">
+					<div class="flip-card-back" style="background-color: rgb(142,84,242);">
 						<div class="card-content">
-							<a href="https://harrypeach.github.io/bootscreennx/"><i class="fab fa-google-play"></i></a>
+							<a href="https://harrypeach.github.io/bootscreennx/"><i class="fas fa-globe-europe"></i></a>
 							<a href="https://github.com/HarryPeach/bootscreennx"><i class="fab fa-gitlab"></i></a>
 						</div>
 					</div>
 				</div>
 			</div>
-            <div class="content">
-                <h3>DinoRunNX</h3>
-                <p>A port of the famous Chromium "Dino Game" to the Nintendo Switch. Written in Javascript, and some C code for launching the inbuilt browser on the device and making it load local files.</p>
-                <a href="https://github.com/HarryPeach/DinoRunNX" title="View the source code on GitHub" class="link-button"><i class="fab fa-github">&nbsp;</i>Source</a>
-            </div>
-            <div class="content">
-                <h3>Skye Assistant</h3>
-                <p>Originally created for my A-level coursework; Skye Assistant is a voice controlled virtual assistant. I rewrote the project with the primary goal of making it more extensible and cleaning up the codebase.</p>
-                <a href="https://github.com/HarryPeach/skye" title="View the source code on GitHub" class="link-button"><i class="fab fa-github">&nbsp;</i>Source</a>
-            </div>
+			<div class="flip-card" style="--image: url(https://user-images.githubusercontent.com/4750998/57111985-0faa6e80-6d36-11e9-8b5c-c097883d8952.png);">
+				<div class="flip-card-inner">
+					<div class="flip-card-front">
+						<div class="card-content">
+							<h1>DinoRunNX</h1>
+							<span>A port of the famous Chromium "Dino Game" to the Nintendo Switch. Written in Javascript, and some C code for launching the inbuilt browser on the device and making it load local files.</span>
+						</div>
+					</div>
+					<div class="flip-card-back" style="background-color: rgb(93,92,244);">
+						<div class="card-content">
+							<a href="https://github.com/HarryPeach/DinoRunNX"><i class="fab fa-github"></i></a>
+						</div>
+					</div>
+				</div>
+			</div>
             <div class="content">
                 <p>You can find most of my other projects on my <a href="https://github.com/HarryPeach">GitHub</a> page</p>
             </div>
