Project links now open in a new tab

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 					</div>
 					<div class="flip-card-back" style="background-color: rgb(237,69,240);">
 						<div class="card-content">
-							<a href="https://github.com/HarryPeach/emojimage"><i class="fab fa-github"></i></a>
+							<a href="https://github.com/HarryPeach/emojimage" target="_blank"><i class="fab fa-github"></i></a>
 						</div>
 					</div>
 				</div>
@@ -56,13 +56,13 @@
 					<div class="flip-card-front">
 						<div class="card-content">
 							<h1>Ciph</h1>
-							<span>Ciph is an android app to generate secure and memorable passwords. Based on a famous xkcd comic, passwords are generated from a pool of random words making them easier to remember and providing higher entropy than a traditional password.</span>
+							<span>Ciph is an android app to generate secure and memorable passwords. Based on a famous xkcd comic; the app generates passwords from a pool of random words making them easier to remember and providing higher entropy than traditional alternatives.</span>
 						</div>
 					</div>
 					<div class="flip-card-back" style="background-color: rgb(182,73,240);">
 						<div class="card-content">
-							<a href="https://play.google.com/store/apps/details?id=ga.cphn.ciph"><i class="fab fa-google-play"></i></a>
-							<a href="https://gitlab.com/harrypeach1999/ciph"><i class="fab fa-gitlab"></i></a>
+							<a href="https://play.google.com/store/apps/details?id=ga.cphn.ciph" target="_blank"><i class="fab fa-google-play"></i></a>
+							<a href="https://gitlab.com/harrypeach1999/ciph" target="_blank"><i class="fab fa-gitlab"></i></a>
 						</div>
 					</div>
 				</div>
@@ -77,8 +77,8 @@
 					</div>
 					<div class="flip-card-back" style="background-color: rgb(142,84,242);">
 						<div class="card-content">
-							<a href="https://harrypeach.github.io/bootscreennx/"><i class="fas fa-globe-europe"></i></a>
-							<a href="https://github.com/HarryPeach/bootscreennx"><i class="fab fa-gitlab"></i></a>
+							<a href="https://harrypeach.github.io/bootscreennx/" target="_blank"><i class="fas fa-globe-europe"></i></a>
+							<a href="https://github.com/HarryPeach/bootscreennx" target="_blank"><i class="fab fa-gitlab"></i></a>
 						</div>
 					</div>
 				</div>
@@ -93,7 +93,7 @@
 					</div>
 					<div class="flip-card-back" style="background-color: rgb(93,92,244);">
 						<div class="card-content">
-							<a href="https://github.com/HarryPeach/DinoRunNX"><i class="fab fa-github"></i></a>
+							<a href="https://github.com/HarryPeach/DinoRunNX" target="_blank"><i class="fab fa-github"></i></a>
 						</div>
 					</div>
 				</div>
