Converted prjct. banners to local (optimized) imgs

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="A website for my personal projects, contact information, and a few other neat things.">
     <meta name="author" content="Harry Peach">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#ffffff">
     <title>Harry Peach</title>
 
     <!-- CSS -->
@@ -14,14 +15,13 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Heebo:900" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-    
+	
+	<!-- PWA Icons -->
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/icon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/icon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/icon/favicon-16x16.png">
     <link rel="manifest" href="/assets/icon/site.webmanifest">
     <link rel="mask-icon" href="/assets/icon/safari-pinned-tab.svg" color="#5bbad5">
-
-    <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
@@ -36,7 +36,7 @@
     <main>
         <section>
 			<h2>Some of my projects</h2>
-			<div class="flip-card" style="--image: url(https://user-images.githubusercontent.com/4750998/59889195-262e8700-93c3-11e9-9eb2-ea328b5f620d.png?s=200);">
+			<div class="flip-card" style="--image: url(/assets/img/emojimage-banner.jpg);">
 				<div class="flip-card-inner">
 					<div class="flip-card-front">
 						<div class="card-content">
@@ -51,7 +51,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="flip-card" style="--image: url(http://imgs.xkcd.com/comics/password_strength.png);">
+			<div class="flip-card" style="--image: url(/assets/img/ciph-banner.jpg);">
 				<div class="flip-card-inner">
 					<div class="flip-card-front">
 						<div class="card-content">
@@ -67,7 +67,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="flip-card" style="--image: url(https://user-images.githubusercontent.com/4750998/57393423-f59be080-71ba-11e9-8517-1cc6d41c3a1e.png);">
+			<div class="flip-card" style="--image: url(/assets/img/bootscreennx-banner.jpg);">
 				<div class="flip-card-inner">
 					<div class="flip-card-front">
 						<div class="card-content">
@@ -83,7 +83,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="flip-card" style="--image: url(https://user-images.githubusercontent.com/4750998/57111985-0faa6e80-6d36-11e9-8b5c-c097883d8952.png);">
+			<div class="flip-card" style="--image: url(/assets/img/dinorunnx-banner.jpg);">
 				<div class="flip-card-inner">
 					<div class="flip-card-front">
 						<div class="card-content">
