--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<title>Harry Peach</title>
 
 	<!-- CSS -->
-	<link href="assets/css/core.css" rel="stylesheet">
+	<link href="assets/css/core.css?v2" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Heebo:900" rel="stylesheet">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
