--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 	<!-- CSS -->
 	<link href="assets/css/core.css?v2" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Heebo:900" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400|Heebo:900" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=" rel="stylesheet">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
 		integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 
