Update gitlab links

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<p>Computer Science student at <a href="https://ncl.ac.uk/">Newcastle University</a>.</p>
 		<a href="https://github.com/HarryPeach" title="Visit my GitHub page" class="link-button"><i
 				class="fab fa-github"></i></a>
-		<a href="https://gitlab.com/harrypeach1999" title="Visit my GitLab page" class="link-button"><i
+		<a href="https://gitlab.com/b" title="Visit my GitLab page" class="link-button"><i
 				class="fab fa-gitlab"></i></a>
 		<a href="https://www.linkedin.com/in/harry-peach-a28893156/" title="Visit my LinkedIn page"
 			class="link-button"><i class="fab fa-linkedin"></i></a>
@@ -70,7 +70,7 @@
 						<div class="card-content">
 							<a href="https://play.google.com/store/apps/details?id=ga.cphn.ciph" target="_blank"
 								rel="noreferrer" title="Ciph on Google Play"><i class="fab fa-google-play"></i></a>
-							<a href="https://gitlab.com/harrypeach1999/ciph" target="_blank" rel="noreferrer"
+							<a href="https://gitlab.com/b/ciph" target="_blank" rel="noreferrer"
 								title="Ciph on GitLab"><i class="fab fa-gitlab"></i></a>
 						</div>
 					</div>
