Added language / topic chips to projects

--- a/index.html
+++ b/index.html
@@ -44,7 +44,12 @@
 				<div class="flip-card-inner">
 					<div class="flip-card-front">
 						<div class="card-content">
-							<h1>emojimage</h1>
+							<div class="card-header">
+								<h1>emojimage</h1>
+								<span class="lang-chip">Python</span>
+								<span class="lang-chip">setuptools</span>
+								<span class="lang-chip">pip</span><br />
+							</div>
 							<span>A python package that generates collages of emojis based on an image input.</span>
 						</div>
 					</div>
@@ -60,7 +65,11 @@
 				<div class="flip-card-inner">
 					<div class="flip-card-front">
 						<div class="card-content">
-							<h1>Ciph</h1>
+							<div class="card-header">
+								<h1>Ciph</h1>
+								<span class="lang-chip">Java</span>
+								<span class="lang-chip">Android</span>
+							</div>
 							<span>Ciph is an android app to generate secure and memorable passwords. Based on a famous
 								xkcd comic; the app generates passwords from a pool of random words making them easier
 								to remember and providing higher entropy than traditional alternatives.</span>
@@ -80,7 +89,12 @@
 				<div class="flip-card-inner">
 					<div class="flip-card-front">
 						<div class="card-content">
-							<h1>bootscreennx</h1>
+							<div class="card-header">
+								<h1>bootscreennx</h1>
+								<span class="lang-chip">Switch</span>
+								<span class="lang-chip">JS</span>
+								<span class="lang-chip">HTML / CSS</span>
+							</div>
 							<span>A website to create boot images for the Nintendo Switch that resemble BIOS screens
 								from early computers. Rewritten and improved from a project that provided a similar
 								service for the Nintendo 3DS.</span>
@@ -100,7 +114,12 @@
 				<div class="flip-card-inner">
 					<div class="flip-card-front">
 						<div class="card-content">
-							<h1>DinoRunNX</h1>
+							<div class="card-header">
+								<h1>DinoRunNX</h1>
+								<span class="lang-chip">Switch</span>
+								<span class="lang-chip">C / C++</span>
+								<span class="lang-chip">HTML / CSS</span>
+							</div>
 							<span>A port of the famous Chromium "Dino Game" to the Nintendo Switch. Written in
 								Javascript, and some C code for launching the inbuilt browser on the device and making
 								it load local files.</span>
