--- a/index.html
+++ b/index.html
@@ -1,300 +1,193 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<!-- Meta -->
-		<meta charset="UTF-8" />
-		<meta
-			name="description"
-			content="A website for my personal projects, contact information, and a few other neat things."
-		/>
-		<meta name="author" content="Harry Peach" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta name="theme-color" content="#ffffff" />
-		<title>Harry Peach</title>
 
-		<!-- CSS -->
-		<link href="assets/css/core.css?v2" rel="stylesheet" />
-		<link
-			href="https://fonts.googleapis.com/css?family=Open+Sans:400|Heebo:900"
-			rel="stylesheet"
-		/>
-		<link
-			rel="stylesheet"
-			href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
-			integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
-			crossorigin="anonymous"
-		/>
+<head>
+	<!-- Meta -->
+	<meta charset="UTF-8" />
+	<meta name="description"
+		content="A website for my personal projects, contact information, and a few other neat things." />
+	<meta name="author" content="Harry Peach" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta name="theme-color" content="#ffffff" />
+	<title>Harry Peach</title>
 
-		<!-- PWA Icons -->
-		<link
-			rel="apple-touch-icon"
-			sizes="180x180"
-			href="/assets/icon/apple-touch-icon.png"
-		/>
-		<link
-			rel="icon"
-			type="image/png"
-			sizes="32x32"
-			href="/assets/icon/favicon-32x32.png"
-		/>
-		<link
-			rel="icon"
-			type="image/png"
-			sizes="16x16"
-			href="/assets/icon/favicon-16x16.png"
-		/>
-		<link rel="manifest" href="/assets/icon/site.webmanifest" />
-		<link
-			rel="mask-icon"
-			href="/assets/icon/safari-pinned-tab.svg"
-			color="#5bbad5"
-		/>
-	</head>
+	<!-- CSS -->
+	<link href="assets/css/core.css?v2" rel="stylesheet" />
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400|Heebo:900" rel="stylesheet" />
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+		integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous" />
 
-	<body>
-		<header>
-			<h1>Harry Peach</h1>
-			<p>
-				Computer Science student at
-				<a href="https://ncl.ac.uk/">Newcastle University</a>.
-			</p>
-			<a
-				href="https://github.com/HarryPeach"
-				title="Visit my GitHub page"
-				class="link-button"
-				><i class="fab fa-github"></i
-			></a>
-			<a
-				href="https://gitlab.com/b"
-				title="Visit my GitLab page"
-				class="link-button"
-				><i class="fab fa-gitlab"></i
-			></a>
-			<a
-				href="https://www.linkedin.com/in/harry-peach-a28893156/"
-				title="Visit my LinkedIn page"
-				class="link-button"
-				><i class="fab fa-linkedin"></i
-			></a>
-		</header>
-		<hr />
-		<main>
-			<section>
-				<h2>Some of my projects</h2>
-				<div
-					class="flip-card"
-					style="--image: url(/assets/img/emojimage-banner.jpg);"
-				>
-					<div class="flip-card-inner">
-						<div class="flip-card-front">
-							<div class="card-content">
-								<div class="card-header">
-									<h1>emojimage</h1>
-									<span class="lang-chip">Python</span>
-									<span class="lang-chip">setuptools</span>
-									<span class="lang-chip">pip</span><br />
-								</div>
-								<span
-									>A python package that generates collages of
-									emojis based on an image input.</span
-								>
+	<!-- PWA Icons -->
+	<link rel="apple-touch-icon" sizes="180x180" href="/assets/icon/apple-touch-icon.png" />
+	<link rel="icon" type="image/png" sizes="32x32" href="/assets/icon/favicon-32x32.png" />
+	<link rel="icon" type="image/png" sizes="16x16" href="/assets/icon/favicon-16x16.png" />
+	<link rel="manifest" href="/assets/icon/site.webmanifest" />
+	<link rel="mask-icon" href="/assets/icon/safari-pinned-tab.svg" color="#5bbad5" />
+</head>
+
+<body>
+	<header>
+		<h1>Harry Peach</h1>
+		<p>
+			Software Engineer at
+			<a href="https://www.jaguarlandrover.com/">Jaguar Land Rover</a>.
+		</p>
+		<a href="https://github.com/HarryPeach" title="Visit my GitHub page" class="link-button"><i
+				class="fab fa-github"></i></a>
+		<a href="https://gitlab.com/b" title="Visit my GitLab page" class="link-button"><i
+				class="fab fa-gitlab"></i></a>
+		<a href="https://www.linkedin.com/in/harry-peach-a28893156/" title="Visit my LinkedIn page"
+			class="link-button"><i class="fab fa-linkedin"></i></a>
+	</header>
+	<hr />
+	<main>
+		<section>
+			<h2>Some of my projects</h2>
+			<div class="flip-card" style="--image: url(/assets/img/emojimage-banner.jpg);">
+				<div class="flip-card-inner">
+					<div class="flip-card-front">
+						<div class="card-content">
+							<div class="card-header">
+								<h1>emojimage</h1>
+								<span class="lang-chip">Python</span>
+								<span class="lang-chip">setuptools</span>
+								<span class="lang-chip">pip</span><br />
 							</div>
+							<span>A python package that generates collages of
+								emojis based on an image input.</span>
 						</div>
-						<div
-							class="flip-card-back"
-							style="background-color: rgb(237,69,240);"
-						>
-							<div class="card-content">
-								<a
-									href="https://github.com/HarryPeach/emojimage"
-									target="_blank"
-									rel="noreferrer"
-									title="emojimage on GitHub"
-									><i class="fab fa-github"></i
-								></a>
-							</div>
+					</div>
+					<div class="flip-card-back" style="background-color: rgb(237,69,240);">
+						<div class="card-content">
+							<a href="https://github.com/HarryPeach/emojimage" target="_blank" rel="noreferrer"
+								title="emojimage on GitHub"><i class="fab fa-github"></i></a>
 						</div>
 					</div>
 				</div>
-				<div
-					class="flip-card"
-					style="--image: url(/assets/img/ciph-banner.jpg);"
-				>
-					<div class="flip-card-inner">
-						<div class="flip-card-front">
-							<div class="card-content">
-								<div class="card-header">
-									<h1>Ciph</h1>
-									<span class="lang-chip">Java</span>
-									<span class="lang-chip">Android</span>
-								</div>
-								<span
-									>Ciph is an android app to generate secure
-									and memorable passwords. Based on a famous
-									xkcd comic; the app generates passwords from
-									a pool of random words making them easier to
-									remember and providing higher entropy than
-									traditional alternatives.</span
-								>
+			</div>
+			<div class="flip-card" style="--image: url(/assets/img/ciph-banner.jpg);">
+				<div class="flip-card-inner">
+					<div class="flip-card-front">
+						<div class="card-content">
+							<div class="card-header">
+								<h1>Ciph</h1>
+								<span class="lang-chip">Java</span>
+								<span class="lang-chip">Android</span>
 							</div>
+							<span>Ciph is an android app to generate secure
+								and memorable passwords. Based on a famous
+								xkcd comic; the app generates passwords from
+								a pool of random words making them easier to
+								remember and providing higher entropy than
+								traditional alternatives.</span>
 						</div>
-						<div
-							class="flip-card-back"
-							style="background-color: rgb(182,73,240);"
-						>
-							<div class="card-content">
-								<a
-									href="https://play.google.com/store/apps/details?id=ga.cphn.ciph"
-									target="_blank"
-									rel="noreferrer"
-									title="Ciph on Google Play"
-									><i class="fab fa-google-play"></i
-								></a>
-								<a
-									href="https://gitlab.com/b/ciph"
-									target="_blank"
-									rel="noreferrer"
-									title="Ciph on GitLab"
-									><i class="fab fa-gitlab"></i
-								></a>
-							</div>
+					</div>
+					<div class="flip-card-back" style="background-color: rgb(182,73,240);">
+						<div class="card-content">
+							<a href="https://play.google.com/store/apps/details?id=ga.cphn.ciph" target="_blank"
+								rel="noreferrer" title="Ciph on Google Play"><i class="fab fa-google-play"></i></a>
+							<a href="https://gitlab.com/b/ciph" target="_blank" rel="noreferrer"
+								title="Ciph on GitLab"><i class="fab fa-gitlab"></i></a>
 						</div>
 					</div>
 				</div>
-				<div
-					class="flip-card"
-					style="--image: url(/assets/img/bootscreennx-banner.jpg);"
-				>
-					<div class="flip-card-inner">
-						<div class="flip-card-front">
-							<div class="card-content">
-								<div class="card-header">
-									<h1>bootscreennx</h1>
-									<span class="lang-chip">Switch</span>
-									<span class="lang-chip">JS</span>
-									<span class="lang-chip">HTML / CSS</span>
-								</div>
-								<span
-									>A website to create boot images for the
-									Nintendo Switch that resemble BIOS screens
-									from early computers. Rewritten and improved
-									from a project that provided a similar
-									service for the Nintendo 3DS.</span
-								>
+			</div>
+			<div class="flip-card" style="--image: url(/assets/img/bootscreennx-banner.jpg);">
+				<div class="flip-card-inner">
+					<div class="flip-card-front">
+						<div class="card-content">
+							<div class="card-header">
+								<h1>bootscreennx</h1>
+								<span class="lang-chip">Switch</span>
+								<span class="lang-chip">JS</span>
+								<span class="lang-chip">HTML / CSS</span>
 							</div>
+							<span>A website to create boot images for the
+								Nintendo Switch that resemble BIOS screens
+								from early computers. Rewritten and improved
+								from a project that provided a similar
+								service for the Nintendo 3DS.</span>
 						</div>
-						<div
-							class="flip-card-back"
-							style="background-color: rgb(142,84,242);"
-						>
-							<div class="card-content">
-								<a
-									href="https://harrypeach.github.io/bootscreennx/"
-									target="_blank"
-									rel="noreferrer"
-									title="bootscreennx site"
-									><i class="fas fa-globe-europe"></i
-								></a>
-								<a
-									href="https://github.com/HarryPeach/bootscreennx"
-									target="_blank"
-									rel="noreferrer"
-									title="bootscreennx on GitHub"
-									><i class="fab fa-gitlab"></i
-								></a>
-							</div>
+					</div>
+					<div class="flip-card-back" style="background-color: rgb(142,84,242);">
+						<div class="card-content">
+							<a href="https://harrypeach.github.io/bootscreennx/" target="_blank" rel="noreferrer"
+								title="bootscreennx site"><i class="fas fa-globe-europe"></i></a>
+							<a href="https://github.com/HarryPeach/bootscreennx" target="_blank" rel="noreferrer"
+								title="bootscreennx on GitHub"><i class="fab fa-gitlab"></i></a>
 						</div>
 					</div>
 				</div>
-				<div
-					class="flip-card"
-					style="--image: url(/assets/img/dinorunnx-banner.jpg);"
-				>
-					<div class="flip-card-inner">
-						<div class="flip-card-front">
-							<div class="card-content">
-								<div class="card-header">
-									<h1>DinoRunNX</h1>
-									<span class="lang-chip">Switch</span>
-									<span class="lang-chip">C / C++</span>
-									<span class="lang-chip">HTML / CSS</span>
-								</div>
-								<span
-									>A port of the famous Chromium "Dino Game"
-									to the Nintendo Switch. Written in
-									Javascript, and some C code for launching
-									the inbuilt browser on the device and making
-									it load local files.</span
-								>
+			</div>
+			<div class="flip-card" style="--image: url(/assets/img/dinorunnx-banner.jpg);">
+				<div class="flip-card-inner">
+					<div class="flip-card-front">
+						<div class="card-content">
+							<div class="card-header">
+								<h1>DinoRunNX</h1>
+								<span class="lang-chip">Switch</span>
+								<span class="lang-chip">C / C++</span>
+								<span class="lang-chip">HTML / CSS</span>
 							</div>
+							<span>A port of the famous Chromium "Dino Game"
+								to the Nintendo Switch. Written in
+								Javascript, and some C code for launching
+								the inbuilt browser on the device and making
+								it load local files.</span>
 						</div>
-						<div
-							class="flip-card-back"
-							style="background-color: rgb(93,92,244);"
-						>
-							<div class="card-content">
-								<a
-									href="https://github.com/HarryPeach/DinoRunNX"
-									target="_blank"
-									rel="noreferrer"
-									title="DinoRunNX on GitHub"
-									><i class="fab fa-github"></i
-								></a>
-							</div>
+					</div>
+					<div class="flip-card-back" style="background-color: rgb(93,92,244);">
+						<div class="card-content">
+							<a href="https://github.com/HarryPeach/DinoRunNX" target="_blank" rel="noreferrer"
+								title="DinoRunNX on GitHub"><i class="fab fa-github"></i></a>
 						</div>
 					</div>
 				</div>
-				<div class="content">
-					<p>
-						You can find most of my other projects on my
-						<a href="https://github.com/HarryPeach">GitHub</a> page
-					</p>
-				</div>
-			</section>
-			<section>
-				<h2>Other information</h2>
-				<div class="content" id="contact">
-					<h3>Contact me</h3>
-					<table>
-						<tr id="contactMethod">
-							<td>Email</td>
-							<td>
-								<a href="mailto:harrypeach1999@gmail.com"
-									>harrypeach1999@gmail.com</a
-								>
-							</td>
-						</tr>
-						<tr>
-							<td>Telegram</td>
-							<td>
-								<a href="https://t.me/harrypeach">harrypeach</a>
-							</td>
-						</tr>
-					</table>
-				</div>
-				<div class="content">
-					<h3>My GPG key</h3>
-					<p>
-						Most of my git commits and released binaries are signed
-						with my GPG key. If you'd like to validate that anything
-						I release truly came from me, you can download the
-						public key below. The fingerprint is:
-					</p>
-					<code
-						>CFA0 FBC9 2E95 1DAF 8499 0A41 5A24 B165 D562 27F3</code
-					>
-					<a
-						href="assets/files/CFA0FBC92E951DAF84990A415A24B165D56227F3.asc"
-						title="My public GPG key"
-						class="link-button"
-						><i class="fas fa-lock">&nbsp;</i>Public key</a
-					>
-				</div>
-			</section>
-		</main>
-		<hr />
-		<footer>
-			<span>Copyright &copy; Harry Peach 2020</span>
-		</footer>
-	</body>
+			</div>
+			<div class="content">
+				<p>
+					You can find most of my other projects on my
+					<a href="https://github.com/HarryPeach">GitHub</a> page
+				</p>
+			</div>
+		</section>
+		<section>
+			<h2>Other information</h2>
+			<div class="content" id="contact">
+				<h3>Contact me</h3>
+				<table>
+					<tr id="contactMethod">
+						<td>Email</td>
+						<td>
+							<a href="mailto:harrypeach1999@gmail.com">harrypeach1999@gmail.com</a>
+						</td>
+					</tr>
+					<tr>
+						<td>Telegram</td>
+						<td>
+							<a href="https://t.me/harrypeach">harrypeach</a>
+						</td>
+					</tr>
+				</table>
+			</div>
+			<div class="content">
+				<h3>My GPG key</h3>
+				<p>
+					Most of my git commits and released binaries are signed
+					with my GPG key. If you'd like to validate that anything
+					I release truly came from me, you can download the
+					public key below. The fingerprint is:
+				</p>
+				<code>CFA0 FBC9 2E95 1DAF 8499 0A41 5A24 B165 D562 27F3</code>
+				<a href="assets/files/CFA0FBC92E951DAF84990A415A24B165D56227F3.asc" title="My public GPG key"
+					class="link-button"><i class="fas fa-lock">&nbsp;</i>Public key</a>
+			</div>
+		</section>
+	</main>
+	<hr />
+	<footer>
+		<span>Copyright &copy; Harry Peach 2020</span>
+	</footer>
+</body>
+
 </html>
